// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LimitCustomMarketPriceButton > renders the custom amount correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: unset;
}

.c1 {
  width: unset;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: flex-start;
  gap: 1px;
}

.c3 {
  letter-spacing: -0.01em;
}

.c2 {
  color: #131313;
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(19, 19, 19, 0.08);
  border-radius: 999px 0px 0px 999px;
  border-top: 1px solid rgba(19, 19, 19, 0.08);
  border-bottom: 1px solid rgba(19, 19, 19, 0.08);
  border-left: 1px solid rgba(19, 19, 19, 0.08);
  border-right: 0px;
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c2 :hover {
  opacity: 0.6;
}

.c2 :active {
  opacity: 0.4;
}

.c4 {
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
  background-color: rgba(19, 19, 19, 0.08);
  color: rgba(19, 19, 19, 0.63);
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 6px 6px 6px 4px;
  height: 28px;
  border-radius: 0px 999px 999px 0px;
  border-top: 1px solid rgba(19, 19, 19, 0.08);
  border-bottom: 1px solid rgba(19, 19, 19, 0.08);
  border-right: 1px solid rgba(19, 19, 19, 0.08);
  border-left: 1px solid transparent;
}

.c4 :hover {
  opacity: 0.6;
}

.c4 :active {
  opacity: 0.4;
}

<span
  class=""
  style="display: contents;"
>
  <div
    class="c0 c1"
    gap="1px"
    width="unset"
  >
    <button
      class="c2"
    >
      <div
        class="c3 css-1guhfcl"
      >
        +
        10%
      </div>
    </button>
    <button
      class="c4"
    >
      <svg
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </button>
  </div>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitCustomMarketPriceButton > renders the custom amount correctly, negative change 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: unset;
}

.c1 {
  width: unset;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: flex-start;
  gap: 1px;
}

.c3 {
  letter-spacing: -0.01em;
}

.c2 {
  color: #131313;
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(19, 19, 19, 0.08);
  border-radius: 999px 0px 0px 999px;
  border-top: 1px solid rgba(19, 19, 19, 0.08);
  border-bottom: 1px solid rgba(19, 19, 19, 0.08);
  border-left: 1px solid rgba(19, 19, 19, 0.08);
  border-right: 0px;
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c2 :hover {
  opacity: 0.6;
}

.c2 :active {
  opacity: 0.4;
}

.c4 {
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
  background-color: rgba(19, 19, 19, 0.08);
  color: rgba(19, 19, 19, 0.63);
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 6px 6px 6px 4px;
  height: 28px;
  border-radius: 0px 999px 999px 0px;
  border-top: 1px solid rgba(19, 19, 19, 0.08);
  border-bottom: 1px solid rgba(19, 19, 19, 0.08);
  border-right: 1px solid rgba(19, 19, 19, 0.08);
  border-left: 1px solid transparent;
}

.c4 :hover {
  opacity: 0.6;
}

.c4 :active {
  opacity: 0.4;
}

<span
  class=""
  style="display: contents;"
>
  <div
    class="c0 c1"
    gap="1px"
    width="unset"
  >
    <button
      class="c2"
    >
      <div
        class="c3 css-1guhfcl"
      >
        -10.00%
      </div>
    </button>
    <button
      class="c4"
    >
      <svg
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </button>
  </div>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitPresetPriceButton > renders %p correctly, disabled %p and selected %p 0 false false 1`] = `
.c1 {
  letter-spacing: -0.01em;
}

.c0 {
  color: rgba(19, 19, 19, 0.63);
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: unset;
  border-radius: 999px;
  border: 1px solid rgba(19, 19, 19, 0.08);
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c0 :hover {
  opacity: 0.6;
}

.c0 :active {
  opacity: 0.4;
}

<span
  class=""
  style="display: contents;"
>
  <button
    class="c0"
  >
    <div
      class="c1 css-1guhfcl"
    >
      Market
    </div>
  </button>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitPresetPriceButton > renders %p correctly, disabled %p and selected %p 0 false true 1`] = `
.c1 {
  letter-spacing: -0.01em;
}

.c0 {
  color: #131313;
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(19, 19, 19, 0.08);
  border-radius: 999px;
  border: 1px solid rgba(19, 19, 19, 0.08);
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c0 :hover {
  opacity: 0.6;
}

.c0 :active {
  opacity: 0.4;
}

<span
  class=""
  style="display: contents;"
>
  <button
    class="c0"
  >
    <div
      class="c1 css-1guhfcl"
    >
      Market
    </div>
  </button>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitPresetPriceButton > renders %p correctly, disabled %p and selected %p 0 true false 1`] = `
.c1 {
  letter-spacing: -0.01em;
}

.c0 {
  color: rgba(19, 19, 19, 0.63);
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: unset;
  border-radius: 999px;
  border: 1px solid rgba(19, 19, 19, 0.08);
}

<span
  class=""
  style="display: contents;"
>
  <button
    class="c0"
  >
    <div
      class="c1 css-1guhfcl"
    >
      Market
    </div>
  </button>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitPresetPriceButton > renders %p correctly, disabled %p and selected %p 5 false true 1`] = `
.c1 {
  letter-spacing: -0.01em;
}

.c0 {
  color: #131313;
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(19, 19, 19, 0.08);
  border-radius: 999px;
  border: 1px solid rgba(19, 19, 19, 0.08);
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c0 :hover {
  opacity: 0.6;
}

.c0 :active {
  opacity: 0.4;
}

<span
  class=""
  style="display: contents;"
>
  <button
    class="c0"
  >
    <div
      class="c1 css-1guhfcl"
    >
      +
      5%
    </div>
  </button>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitPresetPriceButton > renders %p correctly, disabled %p and selected %p 5 true false 1`] = `
.c1 {
  letter-spacing: -0.01em;
}

.c0 {
  color: rgba(19, 19, 19, 0.63);
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: unset;
  border-radius: 999px;
  border: 1px solid rgba(19, 19, 19, 0.08);
}

<span
  class=""
  style="display: contents;"
>
  <button
    class="c0"
  >
    <div
      class="c1 css-1guhfcl"
    >
      +
      5%
    </div>
  </button>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitPresetPriceButton > renders %p correctly, disabled %p and selected %p 10 false true 1`] = `
.c1 {
  letter-spacing: -0.01em;
}

.c0 {
  color: #131313;
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(19, 19, 19, 0.08);
  border-radius: 999px;
  border: 1px solid rgba(19, 19, 19, 0.08);
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c0 :hover {
  opacity: 0.6;
}

.c0 :active {
  opacity: 0.4;
}

<span
  class=""
  style="display: contents;"
>
  <button
    class="c0"
  >
    <div
      class="c1 css-1guhfcl"
    >
      +
      10%
    </div>
  </button>
  <div
    style="display: contents;"
  />
</span>
`;
